--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,6 @@
   }
 
   .overlay {
-    @apply fixed z-20 h-screen w-screen bg-black bg-opacity-60;
+    @apply fixed h-screen w-screen bg-neutral-900 bg-opacity-60;
   }
 }
